// Copyright (c) 2022 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.daml.ledger.api.v1.admin;

option java_outer_classname = "ObjectMetaOuterClass";
option java_package = "com.daml.ledger.api.v1";
option csharp_namespace = "Com.Daml.Ledger.Api.V1";

// Represents metadata corresponding to some participant resource (e.g. a participant user).
//
// Based on 'ObjectMeta' meta used in Kubernetes API.
// See https://github.com/kubernetes/apimachinery/blob/master/pkg/apis/meta/v1/generated.proto#L640
message ObjectMeta {

  // An opaque value populated by the system.
  //
  // You may use it for concurrent change detection (optimistic locking).
  // To do that include it unmodified in a change request.
  // 'PRECONDITION_VIOLATED' error is signaled when resourceVersion mismatch was detected.
  //
  // If you leave it empty no concurrent change detection checks are applied.
  //
  // Optional
  string resourceVersion = 6;

  // Modifiable key-value pairs.
  //
  // Constraints:
  // 1. The total size over all keys and values cannot exceed 256kb.
  // 2. Keys are composed of an optional prefix segment and required name segment such that:
  //    - key prefix, when present, must be a valid DNS subdomain with at most 253 characters, followed by a '/' (forward slash) character,
  //    - name segment must have at most 63 characters matching that are either alphanumeric ([a-z0-9A-Z]), or a '.' (dot), '-' (dash) or '_' (underscore);
  //      it must start and end with an alphanumeric character.
  // 2. Values can be any valid UTF-8 strings.
  //
  // Keys with empty prefix are reserved for end users.
  // Properties set by external tools or internally by the system must use non-empty key prefixes.
  //
  // When used in an update API calls with a field mask one can select only the whole 'annotations' field to be replaced.
  // I.e. one cannot choose to update or delete only a portion of the annotations map.
  //
  // Due to the semantics of protobuf3 maps, duplicate keys are disallowed.
  // See: https://developers.google.com/protocol-buffers/docs/proto3#maps
  //
  // Optional
  map<string, string> annotations = 12;

}