
// Copyright (c) 2022 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.daml.ledger.api.v1.admin;

import "com/daml/ledger/api/v1/admin/object_meta.proto";
import "google/protobuf/field_mask.proto";

option java_outer_classname = "PartyManagementServiceOuterClass";
option java_package = "com.daml.ledger.api.v1.admin";
option csharp_namespace = "Com.Daml.Ledger.Api.V1.Admin";

// Status: experimental interface, will change before it is deemed production
// ready
//
// We use 'backing participant' to refer to this specific participant in the methods of this API.
//
// Allows inspecting the party management state of a ledger known the backing participant
// and managing participant local party properties.
//
// The authorization rules for its RPCs are specified on the ``<RpcName>Request``
// messages as boolean expressions over the fact:
// (1) ``HasRight(r)`` denoting whether the authenticated user has right ``r``
//
service PartyManagementService {

  // Return the identifier of the backing participant.
  // All horizontally scaled replicas should return the same id.
  // daml-on-kv-ledger: returns an identifier supplied on command line at launch time
  // canton: returns globally unique identifier of the backing participant
  // Errors:
  // - ``UNAUTHENTICATED``: if the request does not include a valid access token
  // - ``PERMISSION_DENIED``: if the claims in the token are insufficient to perform a given operation
  rpc GetParticipantId (GetParticipantIdRequest) returns (GetParticipantIdResponse);

  // Get the party details of the given parties. Only known parties will be
  // returned in the list.
  // Errors:
  // - ``UNAUTHENTICATED``: if the request does not include a valid access token
  // - ``PERMISSION_DENIED``: if the claims in the token are insufficient to perform a given operation
  rpc GetParties (GetPartiesRequest) returns (GetPartiesResponse);

  // List the parties known by the backing participant.
  // The list returned contains parties whose ledger access is facilitated by
  // backing participant and the ones maintained elsewhere.
  // Errors:
  // - ``UNAUTHENTICATED``: if the request does not include a valid access token
  // - ``PERMISSION_DENIED``: if the claims in the token are insufficient to perform a given operation
  rpc ListKnownParties (ListKnownPartiesRequest) returns (ListKnownPartiesResponse);

  // Allocates a new party on a ledger and adds it to the set managed by the backing participant.
  // Caller specifies a party identifier suggestion, the actual identifier
  // allocated might be different and is implementation specific.
  // Caller can specify party metadata that isq stored locally on the backing participant.
  // This call may:
  // - Succeed, in which case the actual allocated identifier is visible in
  //   the response.
  // - Respond with a gRPC error
  // Errors:
  // - ``UNAUTHENTICATED``: if the request does not include a valid access token
  // - ``PERMISSION_DENIED``: if the claims in the token are insufficient to perform a given operation
  // - ``UNIMPLEMENTED``: if synchronous party allocation is not supported by the backing participant
  // - ``DEADLINE_EXCEEDED``: if the request times out
  // - ``INVALID_ARGUMENT``: if the provided hint and/or display name is invalid on the given ledger (see below).
  // daml-on-kv-ledger: suggestion's uniqueness is checked by the validators in
  // the consensus layer and call rejected if the identifier is already present.
  // canton: completely different globally unique identifier is allocated.
  // Behind the scenes calls to an internal protocol are made. As that protocol
  // is richer than the surface protocol, the arguments take implicit values
  // The party identifier suggestion must be a valid party name. Party names are required to be non-empty US-ASCII strings built from letters, digits, space,
  // colon, minus and underscore limited to 255 chars
  rpc AllocateParty (AllocatePartyRequest) returns (AllocatePartyResponse);

  // Updates the participant local metadata of a party.
  // This metadata is stored locally on the backing participant and is not exposed on the given ledger.
  // Errors:
  // - ``UNAUTHENTICATED``: if the request does not include a valid access token
  // - ``PERMISSION_DENIED``: if the claims in the token are insufficient to perform a given operation
  // - ``INVALID_ARGUMENT``: if the payload is malformed or is missing required fields
  // - ``NOT_FOUND``: if the party is not known to the backing participant
  rpc UpdateLocalPartyMetadata (UpdatePartyMetadataRequest) returns (UpdatePartyMetadataResponse);

}

// Required authorization: ``HasRight(ParticipantAdmin)``
message GetParticipantIdRequest {
}

message GetParticipantIdResponse {

  // Identifier of the participant, which SHOULD be globally unique.
  // Must be a valid LedgerString (as describe in ``value.proto``).
  string participant_id = 1;
}

// Required authorization: ``HasRight(ParticipantAdmin)``
message GetPartiesRequest {

  // The stable, unique identifier of the Daml parties.
  // Must be valid PartyIdStrings (as described in ``value.proto``).
  // Required
  repeated string parties = 1;
}

message GetPartiesResponse {

  // The details of the requested Daml parties by the participant, if known.
  // The party details may not be in the same order as requested.
  // Required
  repeated PartyDetails party_details = 1;
}

// Required authorization: ``HasRight(ParticipantAdmin)``
message ListKnownPartiesRequest {
}

message ListKnownPartiesResponse {

  // The details of all Daml parties known by the participant.
  // Required
  repeated PartyDetails party_details = 1;
}

// Required authorization: ``HasRight(ParticipantAdmin)``
message AllocatePartyRequest {

  // A hint to the backing participant which party ID to allocate. It can be
  // ignored.
  // Must be a valid PartyIdString (as described in ``value.proto``).
  // Optional
  string party_id_hint = 1;

  // Human-readable name of the party to be added to the participant. It doesn't
  // have to be unique.
  // Use of this field is discouraged. Consider using modifiable participant local party metadata instead.
  // Optional
  string display_name = 2;

  // Participant local metadata to be bound to this newly allocated party.
  // Optional
  ObjectMeta metadata = 3;
}

message AllocatePartyResponse {

  PartyDetails party_details = 1;
}

// The participant local metadata of a party.
// This metadata is stored locally on the backing participant and is not exposed on the given ledger.
message PartyMetadata {

  // The stable unique identifier of a Daml party.
  // Must be a valid PartyIdString (as described in ``value.proto``).
  // Required
  string party = 1;

  // The metadata of this party.
  // Optional
  ObjectMeta metadata = 2;
}

// Required authorization: ``HasRight(ParticipantAdmin)``
message UpdatePartyMetadataRequest {
  // The participant local party metadata to be updated.
  // Updatable fields:
  // 1. 'metadata' (with the 'replace-all' semantics).
  // Required
  PartyMetadata party_metadata = 1;

  // Specifies the fields of the party metadata resource to be updated.
  // At least one field must be specified, e.g. "party_metadata.metadata"
  // Required
  google.protobuf.FieldMask update_mask = 3;
}

message UpdatePartyMetadataResponse {
  // Updated party metadata resource
  PartyMetadata party_metadata = 1;
}

message PartyDetails {

  // The stable unique identifier of a Daml party.
  // Must be a valid PartyIdString (as described in ``value.proto``).
  // Required
  string party = 1;

  // Human readable name associated with the party. Caution, it might not be
  // unique.
  // Use of this field is discouraged. Consider using modifiable participant local party metadata instead.
  // Optional
  string display_name = 2;

  // true if party is hosted by the backing participant.
  // Required
  bool is_local = 3;

  // Represents participant local metadata of this party.
  // Optional
  ObjectMeta local_metadata = 4;
}
