// Copyright (c) 2022 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.daml.ledger.api.v1.admin;

import "com/daml/ledger/api/v1/admin/object_meta.proto";
import "google/protobuf/field_mask.proto";

option java_outer_classname = "UserManagementServiceOuterClass";
option java_package = "com.daml.ledger.api.v1.admin";
option csharp_namespace = "Com.Daml.Ledger.Api.V1.Admin";


// Service to manage users and their rights for interacting with the Ledger API
// served by a participant node.
//
// The authorization rules for its RPCs are specified on the ``<RpcName>Request``
// messages as boolean expressions over these two facts:
// (1) ``HasRight(r)`` denoting whether the authenticated user has right ``r`` and
// (2) ``IsAuthenticatedUser(uid)`` denoting whether ``uid`` is the empty string or equal to the id of the authenticated user.
//
service UserManagementService {

    // Create a new user.
    // Errors:
    // - ``ALREADY_EXISTS``: if the user already exists
    // - ``UNAUTHENTICATED``: if the request does not include a valid access token
    // - ``PERMISSION_DENIED``: if the claims in the token are insufficient to perform a given operation
    // - ``INVALID_ARGUMENT``: if the payload is malformed or is missing required fields
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);

    // Get the user data of a specific user or the authenticated user.
    // Errors:
    // - ``NOT_FOUND``: if the user doesn't exist
    // - ``UNAUTHENTICATED``: if the request does not include a valid access token
    // - ``PERMISSION_DENIED``: if the claims in the token are insufficient to perform a given operation
    // - ``INVALID_ARGUMENT``: if the payload is malformed or is missing required fields
    rpc GetUser (GetUserRequest) returns (GetUserResponse);

    // Updates a user resource.
    // Errors:
    // - ``UNAUTHENTICATED``: if the request does not include a valid access token
    // - ``PERMISSION_DENIED``: if the claims in the token are insufficient to perform a given operation
    // - ``INVALID_ARGUMENT``: if the payload is malformed or is missing required fields
    // - ``NOT_FOUND``: if the user doesn't exist
    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);

    // Delete an existing user and all its rights.
    // Errors:
    // - ``NOT_FOUND``: if the user doesn't exist
    // - ``UNAUTHENTICATED``: if the request does not include a valid access token
    // - ``PERMISSION_DENIED``: if the claims in the token are insufficient to perform a given operation
    // - ``INVALID_ARGUMENT``: if the payload is malformed or is missing required fields
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);

    // List all existing users.
    // Errors:
    // - ``UNAUTHENTICATED``: if the request does not include a valid access token
    // - ``PERMISSION_DENIED``: if the claims in the token are insufficient to perform a given operation
    // - ``INVALID_ARGUMENT``: if the payload is malformed or is missing required fields
    rpc ListUsers (ListUsersRequest) returns (ListUsersResponse);

    // Grant rights to a user.
    // Errors:
    // - ``NOT_FOUND``: if the user doesn't exist
    // - ``UNAUTHENTICATED``: if the request does not include a valid access token
    // - ``PERMISSION_DENIED``: if the claims in the token are insufficient to perform a given operation
    // - ``INVALID_ARGUMENT``: if the payload is malformed or is missing required fields
    rpc GrantUserRights (GrantUserRightsRequest) returns (GrantUserRightsResponse);

    // Revoke rights from a user.
    // Errors:
    // - ``NOT_FOUND``: if the user doesn't exist
    // - ``UNAUTHENTICATED``: if the request does not include a valid access token
    // - ``PERMISSION_DENIED``: if the claims in the token are insufficient to perform a given operation
    // - ``INVALID_ARGUMENT``: if the payload is malformed or is missing required fields
    rpc RevokeUserRights (RevokeUserRightsRequest) returns (RevokeUserRightsResponse);

    // List the set of all rights granted to a user.
    // Errors:
    // - ``NOT_FOUND``: if the user doesn't exist
    // - ``UNAUTHENTICATED``: if the request does not include a valid access token
    // - ``PERMISSION_DENIED``: if the claims in the token are insufficient to perform a given operation
    // - ``INVALID_ARGUMENT``: if the payload is malformed or is missing required fields
    rpc ListUserRights (ListUserRightsRequest) returns (ListUserRightsResponse);
}


// Users and rights
///////////////////

// Users are used to dynamically manage the rights given to Daml applications.
// They are stored and managed per participant node.
//
// Read the :doc:`Authorization documentation </app-dev/authorization>` to learn more.
message User {
    // The user identifier, which must be a non-empty string of at most 128
    // characters that are either lowercase alphanumeric ASCII characters or one of the symbols "@^$.!`-#+'~_|:".
    // Required
    string id = 1;

    // The primary party as which this user reads and acts by default on the ledger
    // *provided* it has the corresponding ``CanReadAs(primary_party)`` or
    // ``CanActAs(primary_party)`` rights.
    // Ledger API clients SHOULD set this field to a non-empty value for all users to
    // enable the users to act on the ledger using their own Daml party.
    // Users for participant administrators MAY have an associated primary party.
    // Optional
    string primary_party = 2;

    // When set to 'true' deny this user is denied all access to the Ledger API.
    // When set 'false' this users can access the Ledger API access at the level corresponding to its user rights.
    // Optional
    bool is_deactivated = 3;

    // The metadata of this party.
    // Optional
    ObjectMeta metadata = 4;
}


// A right granted to a user.
message Right {
    // The right to administrate the participant node.
    message ParticipantAdmin {}

    message CanActAs {
        // The right to authorize commands for this party.
        string party = 1;
    }

    message CanReadAs {
        // The right to read ledger data visible to this party.
        string party = 1;
    }

    oneof kind {
        // The user can administrate the participant node.
        ParticipantAdmin participant_admin = 1;
        // The user can act as a specific party.
        CanActAs can_act_as = 2;
        // The user can read ledger data visible to a specific party.
        CanReadAs can_read_as = 3;
    }
}


// RPC requests and responses
/////////////////////////////

// Required authorization: ``HasRight(ParticipantAdmin)``
message CreateUserRequest {
    // The user to create.
    // Required
    User user = 1;

    // The rights to be assigned to the user upon creation,
    // which SHOULD include appropriate rights for the ``user.primary_party``.
    // Required
    repeated Right rights = 2;
}

message CreateUserResponse {
    // Created user.
    User user = 1;
}

// Required authorization: ``HasRight(ParticipantAdmin) OR IsAuthenticatedUser(user_id)``
message GetUserRequest {
    // The user whose data to retrieve.
    // If set to empty string (the default), then the data for the authenticated user will be retrieved.
    // Required
    string user_id = 1;
}

message GetUserResponse {
    // Retrieved user.
    User user = 1;
}



// Required authorization: ``HasRight(ParticipantAdmin)``
// NOTE: The authenticated participant user is not allowed to deactivate itself.
message UpdateUserRequest {
    // The user to update.
    // Modifiable fields:
    // 1. 'primary_party',
    // 2. 'is_deactivated',
    // 3. 'metadata' (with the 'replace-all' semantics).
    User user = 1;

    // Specifies the fields of the user resource to be updated.
    // At least one field must be specified, e.g. "user.metadata"
    // Required
    google.protobuf.FieldMask update_mask = 2;
}

message UpdateUserResponse {
    // Updated user
    User user = 1;
}

// Required authorization: ``HasRight(ParticipantAdmin)``
message DeleteUserRequest {
    // The user to delete.
    // Required
    string user_id = 1;
}

// Does not (yet) contain any data.
message DeleteUserResponse {
}

// Required authorization: ``HasRight(ParticipantAdmin)``
message ListUsersRequest {

    // Pagination token to determine the specific page to fetch.
    // Leave empty to fetch the first page.
    // Optional
    string page_token = 2;

    // Maximum number of results to be returned by the server. The server will return no more than that many results, but it might return fewer.
    // If 0, the server will decide the number of results to be returned.
    // Optional
    int32 page_size = 3;

}

message ListUsersResponse {
    // A subset of users of the participant node that fit into this page.
    repeated User users = 1;

    // Pagination token to retrieve the next page.
    // Empty, if there are no further results.
    string next_page_token = 2;
}

// Add the rights to the set of rights granted to the user.
//
// Required authorization: ``HasRight(ParticipantAdmin)``
message GrantUserRightsRequest {
    // The user to whom to grant rights.
    // Required
    string user_id = 1;

    // The rights to grant.
    // Required
    repeated Right rights = 2;
}

message GrantUserRightsResponse {
    // The rights that were newly granted by the request.
    repeated Right newly_granted_rights = 1;
}

// Remove the rights from the set of rights granted to the user.
//
// Required authorization: ``HasRight(ParticipantAdmin)``
message RevokeUserRightsRequest {
    // The user from whom to revoke rights.
    // Required
    string user_id = 1;

    // The rights to revoke.
    // Required
    repeated Right rights = 2;
}

message RevokeUserRightsResponse {
    // The rights that were actually revoked by the request.
    repeated Right newly_revoked_rights = 1;
}

// Required authorization: ``HasRight(ParticipantAdmin) OR IsAuthenticatedUser(user_id)``
message ListUserRightsRequest {
    // The user for which to list the rights.
    // If set to empty string (the default), then the rights for the authenticated user will be listed.
    // Required
    string user_id = 1;

    // TODO (i12052): add pagination following https://cloud.google.com/apis/design/design_patterns#list_pagination
}

message ListUserRightsResponse {
    // All rights of the user.
    repeated Right rights = 1;
}
